--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -513,8 +513,8 @@
     <string name="backup_address">Back up address</string>
     <string name="welcome_wallet_title">WELCOME TO WALLET</string>
     <string name="import_keystore">Import Keystore</string>
-    <string name="three_dots">\u2026</string>
-    <string name="ringing">Ringing\u2026</string>
+    <string name="three_dots">…</string>
+    <string name="ringing">Calling………</string>
     <string name="enter_group_name">Enter group name</string>
     <string name="add_new_list">Add new list</string>
     <string name="new_list">New list</string>
