--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -537,4 +537,5 @@
     <string name="error_special_characters">Username cannot contain special characters</string>
     <string name="skip_referral">Cancel this step and go to Home screen?</string>
     <string name="create_by">Create by %s</string>
+    <string name="chat_message_item">%1$s chat %2$s .</string>
 </resources>
