--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -518,7 +518,7 @@
     <string name="invite_friends_text">Invite Friend</string>
     <string name="share_app_text">Let me recommend you this application</string>
     <string name="email_tile">Email *</string>
-    <string name="logout_noti">Are you sure you want to logout this device?</string>
+    <string name="logout_noti">Do you want to logout of this device?</string>
     <string name="share_title">Choose sharing method</string>
     <string name="referral_text">Enter your referral code (optional)</string>
     <string name="Referral">Referral</string>
@@ -529,4 +529,6 @@
     <string name="error_special_characters">Username cannot contain special characters</string>
     <string name="skip_referral">Cancel this step and go to Home screen?</string>
     <string name="chat_message_item">%1$s chat %2$s .</string>
+    <string name="message_kicked_from_group">%s is removed by admin</string>
+    <string name="comming_soon">coming soon</string>
 </resources>
