--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -341,7 +341,7 @@
     <string name="Page1Message">Flattening the World.\nThis is the next-generation SNS platform.</string>
     <string name="Page2Message">Wrappy is free to use: Includes voice calls,\nvideo calls, TV conferences....</string>
     <string name="Page3Message">Wrappy allows you to access your messages from multiple devices.</string>
-    <string name="Page4Message">Either every screen needs a full stop at the end of the sentence or none of them do.</string>
+    <string name="Page4Message">Your messages are 100% encrypted and can be self-destructed</string>
     <string name="Page5Message">You can easily send and receive currencies from friends and family.</string>
     <string name="Page6Message">Unlimited storage for your media data\nand chat records!</string>
     <string name="Page7Message">You can send and receive messages instantly.</string>
