--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -227,8 +227,8 @@
     <string name="unblock_contact_failed">聯絡人未能解除</string>
     <string name="load_contact_list_failed">聯絡人表單未能加載</string>
     <string name="cant_connect_to_server">未能連接伺服器, 請檢查網絡</string>
-    <string name="contact_already_exist">XXX已存在於你聯絡人表單內</string>
-    <string name="contact_blocked">聯絡人XXX已被禁止</string>
+    <string name="contact_already_exist">\"<xliff:g id="user">%1$s</xliff:g>\"已存在於你聯絡人表單內</string>
+    <string name="contact_blocked">聯絡人\"<xliff:g id="user">%1$s</xliff:g>\"已被禁止</string>
     <string name="contact_not_loaded">請稍後, 你的聯絡人表單正上載中</string>
     <string name="network_error">發生網絡錯誤</string>
     <string name="wifi_not_connected_error">需要WIFI作網絡連接</string>
@@ -333,7 +333,7 @@
     <string name="Page1Message">証服全世界, 下一代的新技術:SNS 平台</string>
     <string name="Page2Message">WRAPPY程式是免費平台可給用家使用, 功能包括訊息交流, 視頻, 電話等</string>
     <string name="Page3Message">WRAPPY可讓你於不同平台讀取你的訊息</string>
-    <string name="Page4Message">Either every screen needs a full stop at the end of the sentence or none of them do.</string>
+    <string name="Page4Message">你的郵件是100％加密的，可以自毀</string>
     <string name="Page5Message">你可輕易地發送或接收貨幣給你的朋友或家人</string>
     <string name="Page6Message">無限量地保存你的檔案和聊天訊息</string>
     <string name="Page7Message">你可以立即傳送或接受訊息</string>
@@ -486,9 +486,9 @@
 
     <string name="error_registration">註册失敗, 請再試</string>
 
-    <string name="location_message">Location Message</string>
+    <string name="location_message">位置信息</string>
     <string name="you_sent_sticker">你發送一個標籤</string>
-    <string name="message_sticker">Sticker message</string>
+    <string name="message_sticker">貼紙消息</string>
     <string name="user_sent_sticker">%1$s發送一個標籤</string>
     <string name="tab_menu_menu">選項</string>
     <string name="tab_menu_conversation">聊天</string>
@@ -514,21 +514,20 @@
     <string name="secu_success_description">你的問題(秘密)已更改</string>
     <string name="fail">失敗</string>
     <string name="upload_fail">Upload fail</string>
-    <string name="cancel_and_home">Cancel this step and return to Login screen?</string>
-    <string name="invite_friends_text">Invite Friend</string>
-    <string name="share_app_text">Let me recommend you this application</string>
-    <string name="email_tile">Email *</string>
-    <string name="logout_noti">Do you want to logout of this device?</string>
-    <string name="share_title">Choose sharing method</string>
-    <string name="referral_text">Enter your referral code (optional)</string>
-    <string name="Referral">Referral</string>
-    <string name="update_profile">Update Profile</string>
-    <string name="question">Question %d</string>
-    <string name="request_send_email_success">Send successful! Please check email to change new password</string>
-    <string name="remove_member_success">Remove %s in this group</string>
-    <string name="error_special_characters">Username cannot contain special characters</string>
-    <string name="skip_referral">Cancel this step and go to Home screen?</string>
-    <string name="chat_message_item">%1$s chat %2$s .</string>
-    <string name="message_kicked_from_group">%s is removed by admin</string>
-    <string name="comming_soon">coming soon</string>
+    <string name="cancel_and_home">取消這一步驟，並返回到登錄屏幕？</string>
+    <string name="invite_friends_text">邀請朋友</string>
+    <string name="email_tile">郵件*</string>
+    <string name="logout_noti">你想退出這個設備的？</string>
+    <string name="share_title">選擇共享方法</string>
+    <string name="referral_text">輸入您的推薦代碼（可選）</string>
+    <string name="Referral">推薦</string>
+    <string name="update_profile">更新個人信息</string>
+    <string name="question">提問%d</string>
+    <string name="request_send_email_success">發送成功，請檢查您的郵件更改新密碼</string>
+    <string name="remove_member_success">本組中移除％s</string>
+    <string name="skip_referral">取消這一步，轉到主屏幕？</string>
+    <string name="create_by">%s所創建</string>
+    <string name="chat_message_item">%1$s聊天%2$s。</string>
+    <string name="message_kicked_from_group">%s被管理員除去</string>
+    <string name="comming_soon">快來了</string>
 </resources>
