--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -524,7 +524,7 @@
     <string name="update_profile">更新個人信息</string>
     <string name="question">提問%d</string>
     <string name="request_send_email_success">發送成功，請檢查您的郵件更改新密碼</string>
-    <string name="remove_member_success">本組中移除％s</string>
+    <string name="remove_member_success">本組中移除%s</string>
     <string name="skip_referral">取消這一步，轉到主屏幕？</string>
     <string name="create_by">%s所創建</string>
     <string name="chat_message_item">%1$s聊天%2$s。</string>
